[package]
name = "pushb"
version = "1.1.0"
authors = ["iseurie@gmail.com <iseurie@gmail.com>"]

[lib]
name = "pushb"
path = "src/lib/pushb.rs"

[[bin]]
name = "pushb"
path = "src/bin/pushb.rs"

[dependencies]
curl = "0.4.7"
clap = "2.25.0"
serde = "1.0.8"
serde_json = "1.0.2"
serde_derive = "1.0.8"
